# wgshadertoy

./: .ignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml  rust.yml
examples/: default.wgs  mouse_input.wgs  texture.wgs  two_textures.wgs
extra/linux/: WgShadertoy.desktop  WgShadertoy.metainfo.xml
extra/osx/WgShadertoy.app/Contents/: Info.plist
extra/osx/WgShadertoy.app/Contents/Resources/: wgshadertoy.icns
extra/windows/wix/: license.rtf  wgshadertoy.wxs
i18n/: README.md
i18n/ar/: wgshadertoy.ftl
i18n/de/: wgshadertoy.ftl
i18n/en/: wgshadertoy.ftl
i18n/es/: wgshadertoy.ftl
i18n/fr/: wgshadertoy.ftl
i18n/it/: wgshadertoy.ftl
i18n/ja/: wgshadertoy.ftl
i18n/ko/: wgshadertoy.ftl
i18n/pt/: wgshadertoy.ftl
i18n/ru/: wgshadertoy.ftl
i18n/zh-CN/: wgshadertoy.ftl
i18n/zh-TW/: wgshadertoy.ftl
src/: about.rs  app.rs  context.rs  core.rs  egui_winit_wgpu_context.rs  error.rs  event.rs  example.rs  fonts.rs  fps_counter.rs  fs.rs  i18n.rs  macros.rs  main.rs  preferences.rs  runtime.rs  shortcut.rs  ui.rs  viewport.rs  wgs.rs  window.rs  window_icon.rs
src/assets/: frag.default.wgsl  frag.prefix.wgsl  frag.suffix.wgsl  vert.wgsl
src/presets/: default.wgs  mouse_input.wgs  texture.wgs  two_textures.wgs
src/runtime/: pausable_instant.rs  uniform.rs
src/ui/: highlight.rs  image_upload.rs  mod.rs  utils.rs
src/ui/highlight/: code_theme.rs  mod.rs  token_type.rs
src/wgs/: meta.rs  texture.rs
