[package]
edition = "2021"
name = "wgshadertoy"
version = "0.3.1"
homepage = "https://github.com/fralonra/wgshadertoy"

[features]
fps = []

[dependencies]
anyhow = "1.0"
egui = "0.23"
egui-winit = "0.23"
egui-wgpu = { version = "0.23", features = ["winit"] }
env_logger = "0.9"
futures = "0.3"
image = "0.24"
log = "0.4"
material-icons = { git = "https://github.com/fschutt/material-icons.git" }
raw-window-handle = "0.5"
rfd = "0.10"
wgs_core = "0.1"
wgs_runtime_wgpu = "0.1"
winit = "0.28"
