[package]
edition = "2021"
name = "wgshadertoy"
version = "0.3.2"
homepage = "https://github.com/fralonra/wgshadertoy"

[features]
fps = []

[dependencies]
anyhow = "1.0"
egui = "0.23"
egui-wgpu = { version = "0.23", features = ["winit"] }
egui-winit = "0.23"
env_logger = "0.9"
font-kit = "0.11"
futures = "0.3"
i18n-embed = { version = "0.14", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.7"
image = "0.24"
lazy_static = "1.4"
log = "0.4"
material-icons = { git = "https://github.com/fschutt/material-icons.git" }
raw-window-handle = "0.5"
rfd = "0.10"
rust-embed = "8.0"
wgs_core = "0.1"
wgs_runtime_wgpu = "0.1"
winit = "0.28"
